Fix white box on mobile scroll

--- a/css/styles.css
+++ b/css/styles.css
@@ -110,11 +110,24 @@ html {
 
 body {
   font-family: "IBM Plex Sans", sans-serif;
-  background: url("../assets/bg.svg") no-repeat center center fixed;
-  background-size: cover;
+  /*background: url("../assets/bg.svg") no-repeat center center fixed;
+  background-size: cover;*/
   height: 100%;
   width: 100%;
   overflow-x: hidden !important;
+}
+
+#background{
+  position:fixed;
+  top:0;
+  left:0;
+  width:100%;
+  height:100vh;
+  background-image:url("../assets/bg.svg");
+  background-repeat:no-repeat;
+  background-position:center;
+  background-size:cover;
+  z-index:-2147483647;
 }
 
 h1 {
